# Robotics_Drawing_project_group_21

./: .gitignore  IK_robotv2.py  README.md  drawingv3.py  finalcodearduino.ino
catkin_ws/src/URDF_Assembly/: CMakeLists.txt  URDF_Assembly.urdf  package.xml
catkin_ws/src/URDF_Assembly/config/: joint_names_URDF_Assembly.yaml
catkin_ws/src/URDF_Assembly/launch/: display.launch  gazebo.launch
catkin_ws/src/URDF_Assembly/scripts/: draw_from_photo.py  draw_interactive.py  draw_letter.py  drawing.gcode  gcode_node.py
catkin_ws/src/URDF_Assembly/urdf/: URDF_Assembly.csv  URDF_Assembly.urdf
