<?xml version="1.0"?>
<package format="2">
  <name>URDF_Assembly</name>
  <version>0.0.0</version>
  <description>The URDF_Assembly package</description>
  <maintainer email="your_email@todo.todo">zamzam</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_depend>joint_state_controller</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>ros_controllers</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robot_state_publisher</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  </package>
